home/containers/kubernetes/tasket_kubernetes_container_orchestration/task-gcp-032-traefik-whoami-tls-custom-certs/35-whoami-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-whoami
  namespace: default
spec:
  tls: {}
  entryPoints:
    - web
    - websecure
  routes:
  - match: PathPrefix(`/whoami-app-api`)
    kind: Rule
    services:
    - name: whoami
      port: 80
